fix: pagefind dark mode

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -16,14 +16,6 @@
     a {
         @apply text-link-light dark:text-link-dark underline;
     }
-
-    @media (prefers-color-scheme: dark) {
-        :root {
-            --pagefind-ui-text: #cccccc;
-            --pagefind-ui-background: #181818;
-            --pagefind-ui-border: #181818;
-        }
-    }
 }
 
 @tailwind components;
